[gd_scene load_steps=3 format=2]

[ext_resource path="res://dojo/menu/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://dojo/menu/theme/GodoDojo_Theme.tres" type="Theme" id=2]

[node name="StartScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 128.0
text = "Godot Dojo"
align = 1

[node name="GodotLabel" type="Label" parent="."]
visible = false
margin_left = 481.0
margin_top = 128.44
margin_right = 774.0
margin_bottom = 180.44
text = "Made with Godot"

[node name="GodotIcon" type="Sprite" parent="."]
visible = false
position = Vector2( 856, 136 )
scale = Vector2( 0.12, 0.12 )

[node name="LastTimeTitle" type="Label" parent="."]
visible = false
margin_left = 647.0
margin_top = 258.0
margin_right = 833.0
margin_bottom = 310.0
text = "Last Time:"

[node name="LastTimeValue" type="Label" parent="."]
visible = false
margin_left = 845.0
margin_top = 258.0
margin_right = 969.0
margin_bottom = 310.0
text = "0:00.0"

[node name="BestTimeTitle" type="Label" parent="."]
visible = false
margin_left = 647.0
margin_top = 325.0
margin_right = 833.0
margin_bottom = 377.0
text = "Best Time:"

[node name="BestTimeValue" type="Label" parent="."]
visible = false
margin_left = 845.0
margin_top = 325.0
margin_right = 969.0
margin_bottom = 377.0
text = "0:00.0"

[node name="Controllers" type="Sprite" parent="."]
visible = false
modulate = Color( 0.752941, 0.752941, 0.752941, 0.752941 )
position = Vector2( 302, 423.25 )
scale = Vector2( 0.779793, 0.813225 )

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="OptionsButton" type="Button" parent="Main"]
margin_left = 94.0
margin_top = 377.0
margin_right = 380.0
margin_bottom = 466.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.411765, 0.411765, 1 )
custom_colors/font_color_pressed = Color( 0.880859, 1, 0, 1 )
text = "OPTIONS"
flat = true

[node name="StartButton" type="Button" parent="Main"]
margin_left = 406.0
margin_top = 377.0
margin_right = 592.0
margin_bottom = 466.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.411765, 0.411765, 1 )
custom_colors/font_color_pressed = Color( 0.880859, 1, 0, 1 )
text = "START"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="CreditsButton" type="Button" parent="Main"]
margin_left = 631.0
margin_top = 377.0
margin_right = 886.0
margin_bottom = 466.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "CREDITS"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Options" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Switch" type="Control" parent="Options"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Options/Switch"]
margin_left = 88.0
margin_top = 445.0
margin_right = 338.0
margin_bottom = 527.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "SWITCH"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="CheckButton" type="CheckButton" parent="Options/Switch"]
margin_left = 126.0
margin_top = 484.0
margin_right = 202.0
margin_bottom = 524.0

[node name="Label2" type="Label" parent="Options/Switch"]
margin_top = 524.0
margin_right = 648.0
margin_bottom = 597.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "STANDING/ SITTING"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Audio_Master" type="Control" parent="Options"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Options/Audio_Master"]
margin_left = 423.0
margin_top = 490.0
margin_right = 673.0
margin_bottom = 564.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "MASTER"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="masterSlider" type="HSlider" parent="Options/Audio_Master"]
margin_left = 430.0
margin_top = 526.0
margin_right = 567.0
margin_bottom = 566.0
size_flags_vertical = 1
min_value = -80.0
max_value = 0.0
__meta__ = {
"_editor_description_": ""
}

[node name="Volume" type="Label" parent="Options/Audio_Master"]
margin_left = 423.0
margin_top = 566.0
margin_right = 715.0
margin_bottom = 639.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "VOLUME"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Audio_Music" type="Control" parent="Options"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Options/Audio_Music"]
margin_left = 647.0
margin_top = 490.0
margin_right = 897.0
margin_bottom = 564.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "MUSIC"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="musicSlider" type="HSlider" parent="Options/Audio_Music"]
margin_left = 654.0
margin_top = 526.0
margin_right = 791.0
margin_bottom = 566.0
size_flags_vertical = 1
min_value = -80.0
max_value = 0.0
__meta__ = {
"_editor_description_": ""
}

[node name="Volume" type="Label" parent="Options/Audio_Music"]
margin_left = 647.0
margin_top = 566.0
margin_right = 939.0
margin_bottom = 639.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "VOLUME"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Audio_aFX" type="Control" parent="Options"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Options/Audio_aFX"]
margin_left = 869.0
margin_top = 490.0
margin_right = 1119.0
margin_bottom = 563.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "aFX"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="afxSlider" type="HSlider" parent="Options/Audio_aFX"]
margin_left = 876.0
margin_top = 526.0
margin_right = 1013.0
margin_bottom = 566.0
size_flags_vertical = 1
min_value = -80.0
max_value = 0.0
__meta__ = {
"_editor_description_": ""
}

[node name="Volume" type="Label" parent="Options/Audio_aFX"]
margin_left = 869.0
margin_top = 566.0
margin_right = 1161.0
margin_bottom = 640.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "VOLUME"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BackToMain" type="Button" parent="Options"]
margin_left = 406.0
margin_top = 377.0
margin_right = 592.0
margin_bottom = 466.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.411765, 0.411765, 1 )
custom_colors/font_color_pressed = Color( 0.880859, 1, 0, 1 )
text = "BACK"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Credits" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Credits_Text" type="Control" parent="Credits"]
margin_right = 40.0
margin_bottom = 40.0

[node name="LEFT_UP" type="Label" parent="Credits/Credits_Text"]
margin_right = 1040.0
margin_bottom = 83.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "# CODE/ LIPSYNC #"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Text" type="Label" parent="Credits/Credits_Text/LEFT_UP"]
margin_top = 83.3334
margin_right = 1040.0
margin_bottom = 173.333
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Malcolm Nixon"
align = 1

[node name="RIGHT_UP" type="Label" parent="Credits/Credits_Text"]
margin_left = 711.0
margin_right = 1751.0
margin_bottom = 83.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "# CODE #"
align = 1

[node name="Text" type="Label" parent="Credits/Credits_Text/RIGHT_UP"]
margin_top = 83.3334
margin_right = 1040.0
margin_bottom = 156.333
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Rahul Ghosh aka SYBIOTE"
align = 1

[node name="LEFT_CENTER" type="Label" parent="Credits/Credits_Text"]
margin_left = 13.0
margin_top = 128.0
margin_right = 958.0
margin_bottom = 301.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "# CODE - PROCUDERAL WALK #
# AUTOAVATAR #"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Text" type="Label" parent="Credits/Credits_Text/LEFT_CENTER"]
margin_left = 90.0
margin_top = 173.333
margin_right = 817.0
margin_bottom = 256.333
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "           teddybear082"
__meta__ = {
"_editor_description_": ""
}

[node name="RIGHT_CENTER" type="Label" parent="Credits/Credits_Text"]
margin_left = 711.0
margin_top = 128.0
margin_right = 1751.0
margin_bottom = 201.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "# CODE - GRAB MECHANICS #"
align = 1

[node name="Text" type="Label" parent="Credits/Credits_Text/RIGHT_CENTER"]
margin_top = 83.3334
margin_right = 1040.0
margin_bottom = 156.333
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "N8"
align = 1

[node name="MIDDLE" type="Label" parent="Credits/Credits_Text"]
margin_left = 344.0
margin_top = 419.0
margin_right = 1384.0
margin_bottom = 502.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "# 3D ART/ ANIMATION/ CODE #"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Text" type="Label" parent="Credits/Credits_Text/MIDDLE"]
margin_top = 83.3334
margin_right = 1040.0
margin_bottom = 166.333
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Miodrag Sejic aka DigitalN8m4r3"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="LEFT_BOTTOM" type="Label" parent="Credits/Credits_Text"]
margin_top = 484.0
margin_right = 1040.0
margin_bottom = 567.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "# MUSIC #"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Text" type="Label" parent="Credits/Credits_Text/LEFT_BOTTOM"]
margin_top = 83.3334
margin_right = 1040.0
margin_bottom = 173.333
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Midnight in the Green House
by
Kevin MacLeod"
align = 1

[node name="LICENSE" type="Label" parent="Credits/Credits_Text/LEFT_BOTTOM"]
margin_top = 310.0
margin_right = 1040.0
margin_bottom = 400.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "LICENSE: CC0 Public Domain"
align = 1

[node name="RIGHT_BOTTOM" type="Label" parent="Credits/Credits_Text"]
margin_left = 711.0
margin_top = 484.0
margin_right = 1751.0
margin_bottom = 567.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "# FONT #"
align = 1

[node name="Text" type="Label" parent="Credits/Credits_Text/RIGHT_BOTTOM"]
margin_top = 83.3334
margin_right = 1040.0
margin_bottom = 156.333
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Reggae One
by
kokiabe kabe  &  aaronbell Aaron "
align = 1

[node name="LICENSE" type="Label" parent="Credits/Credits_Text/RIGHT_BOTTOM"]
margin_top = 310.0
margin_right = 1040.0
margin_bottom = 459.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
text = "LICENSE: SIL Open Font License
"
align = 1

[node name="BackToMain" type="Button" parent="Credits"]
margin_left = 406.0
margin_top = 505.0
margin_right = 592.0
margin_bottom = 593.999
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.737255, 0.286275, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.411765, 0.411765, 1 )
custom_colors/font_color_pressed = Color( 0.880859, 1, 0, 1 )
text = "BACK"
flat = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Main/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Main/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Main/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Options/Switch/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="value_changed" from="Options/Audio_Master/masterSlider" to="." method="_on_masterSlider_value_changed"]
[connection signal="value_changed" from="Options/Audio_Music/musicSlider" to="." method="_on_musicSlider_value_changed"]
[connection signal="value_changed" from="Options/Audio_aFX/afxSlider" to="." method="_on_afxSlider_value_changed"]
[connection signal="pressed" from="Options/BackToMain" to="." method="_on_BackToMain_pressed"]
[connection signal="pressed" from="Credits/BackToMain" to="." method="_on_BackToMain_pressed"]
